# ppf_matcher

./: CMakeLists.txt  README.md  config.yaml  linemod_normal.cpp  model_normal_estimation.cpp  ppf_matcher.cpp  scene_normal_estimation.cpp  segment_cluster.cpp
include/surface_matching/: poisson_disk_sampling.hpp  pose_3d.hpp  ppf_helpers.hpp  ppf_match_3d.hpp  t_hash_int.hpp
include/vcglib/: CMakeLists.txt
include/vcglib/apps/: CMakeLists.txt
include/vcglib/apps/sample/: CMakeLists.txt
include/vcglib/vcg/complex/: base.h
include/vcglib/vcg/complex/algorithms/: polygon_support.h
src/: icp.cpp  pose_3d.cpp  ppf_helpers.cpp  ppf_match_3d.cpp  precomp.hpp  t_hash_int.cpp
